@@ -30,53 +30,27 @@
 /* Sets handle h to a position based on gohere */
 /* output, if set, is changed to the new location */
 
-static void set_file_pointer(HANDLE h, LARGE_INTEGER gohere,
-                             PLARGE_INTEGER output, DWORD method)
-{
-  LONG high = gohere.HighPart;
-  DWORD ret = SetFilePointer(h, gohere.LowPart, &high, method);
-  if(ret == INVALID_SET_FILE_POINTER) {
-    DWORD err = GetLastError();
-    if(err != NO_ERROR) {
-      caml_win32_maperr(err);
-      caml_uerror("lockf", Nothing);
-    }
-  }
-  if(output != NULL) {
-    output->LowPart = ret;
-    output->HighPart = high;
-  }
-}
-
 CAMLprim value caml_unix_lockf(value fd, value cmd, value span)
 {
   CAMLparam3(fd, cmd, span);
   OVERLAPPED overlap;
   intnat l_len;
   HANDLE h;
-  OSVERSIONINFO version;
   LARGE_INTEGER cur_position;
   LARGE_INTEGER beg_position;
   LARGE_INTEGER lock_len;
-  LARGE_INTEGER zero;
+  LARGE_INTEGER zero = {{0, 0}};
   DWORD err = NO_ERROR;
-
-  version.dwOSVersionInfoSize = sizeof(OSVERSIONINFO);
-  if(GetVersionEx(&version) == 0) {
-    caml_invalid_argument("lockf only supported on WIN32_NT platforms:"
-                     " could not determine current platform.");
-  }
-  if(version.dwPlatformId != VER_PLATFORM_WIN32_NT) {
-    caml_invalid_argument("lockf only supported on WIN32_NT platforms");
-  }
 
   h = Handle_val(fd);
 
   l_len = Long_val(span);
 
   /* No matter what, we need the current position in the file */
-  zero.HighPart = zero.LowPart = 0;
-  set_file_pointer(h, zero, &cur_position, FILE_CURRENT);
+  if (!SetFilePointerEx(h, zero, &cur_position, FILE_CURRENT)) {
+    caml_win32_maperr(GetLastError());
+    caml_uerror("lockf", Nothing);
+  }
 
   /* All unused fields must be set to zero */
   memset(&overlap, 0, sizeof(overlap));
